Fix alignment on mobile display
-removed unnecessary media query
-added tag to html 'maximum-scale=1, user-scalable=no'
to prevent website from adding width to html element
and offsetting center

--- a/styles.css
+++ b/styles.css
@@ -1,13 +1,9 @@
 * {
     box-sizing: border-box;
     text-align: center;
+    padding: 0;
+    margin: 0;
 
-}
-
-@media screen and (max-width: 959px) {
-body.content-full-screen .entry .alignfull {
-    margin-left: 0 !important;
-}
 }
 
 :root {
@@ -47,6 +43,8 @@ body {
     align-items: center;
 
     margin: 0 auto;
+    width: 100%;
+    overflow-x: hidden;
 }
 
 p {
@@ -57,6 +55,7 @@ p {
     font-family: Seravek, 'Gill Sans Nova', Ubuntu, Calibri, 'DejaVu Sans', source-sans-pro, sans-serif;
     font-weight: 300;
 }
+
 
 
 h1 {
@@ -86,8 +85,8 @@ header {
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
-    
-    box-shadow: 0 0 60px 12px rgb(0, 0, 0);
+
+    box-shadow: 0 10px 30px black;
 }
 
 .content,
@@ -126,11 +125,10 @@ iframe {
     box-shadow: 0 5px 10px black;
 }
 
-.quote-container,
-.logo-container {
+.quote-container {
     display: flex;
     padding: 30px;
-    gap: clamp(0px, 5vw, 10vw);
+    gap: clamp(4px, 5vw, 10vw);
     justify-content: center;
     align-items: center;
 }
@@ -139,6 +137,10 @@ iframe {
     box-shadow: inset 0 0 0 500px rgba(0,0,0,.70);
     padding: 150px 30px;
     flex: 1;
+}
+
+.logo-container {
+    display: flex;
 }
 
 @media screen and (max-width: 1000px) {
@@ -161,5 +163,5 @@ iframe {
 }
 
 .logo-container span {
-    font-size: 2rem;
+    font-size: 10px;
 }
